package service;

public class ApiCantidad {
    public int descuento(int cantidad){

        int descCantidad;
        return descCantidad = cantidad > 12 ? 15 : 0;
    }
}
